css/style.css
/* Legende du style
1 - HEADER
2 - Bar Navigation top


4 - responsive
*/
body{
    background-color:#fff;
    color: black; 
    margin:0;
    overflow-x: hidden;
}
/* HEADER */
.top{
    background-color: #434543;
    color:white;
    display:flex;
    align-items: center;
    justify-content: center;
}
.logo{
    max-width: 100px;
    max-height:100px;
}
.barsection{
    width: 100%;
    height: 5px;
    background-color: #FC7F3C;
    display:flex;
    align-items: center;
    justify-content: center;
}

hr{
    margin:0;
    padding:0;
}


/* Fin Header */ 

/* BAR NAV */
.barnav{

/* background-color: rgba(0, 0, 0, 0.3); */
color: black;
width: 100%;
background-color:rgba(114, 183, 88);
height: 20vh;
}
.button {
    border:solid 2px black;
    align-self: start;
    display:grid;
}
.btn-home{

    margin-left: 25px;
    background-image: url(../images/btn01.png);
    height: 150px;
    border-radius: 5px;
    list-style-type: none;
}
.barnav{
    display: grid !important;
    grid-template-columns: 540px 540px 540px;
    grid-template-rows: 150px; 
    grid-column-gap: 10px;
    grid-row-gap: 15px;
    justify-items: stretch;
    justify-content: center;
    align-items: center;
    align-content: center;
    }
.dropdown-menu{
    width: 400px;
    margin-top:0;
    height: 150px;
    float:top !important;
    top: -150px !important;
    background-color: rgba(255,255,255,0.9) !important;
    border-right: 3px solid black;
}
.item-yellow:hover{
    background-color: rgba(237, 215, 0);
}
.item-green:hover{
    background-color: rgba(100, 212, 84);
}
.item-orange:hover{
    background-color: rgba(229, 118, 7);
}
.barnav ul li{
    list-style-type: none;
}

/* Fin de bar nav */

/* Responsive */
 @media screen and (max-width: 1440px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 480px 480px 480px;
        grid-template-rows: 150px; 
        justify-content: center;
        width: 100%;
        list-style-type:none;
    }
    .btnperso{
        margin-top: -83vw;
    }
    
    .btn-home{
        background-image: url(../images/btn01.png);
        height: 150px;
        border-radius: 5px;
        margin-left: -35px;
    }

} 
@media screen and (max-width: 1800px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 550px;
        grid-template-rows: 150px 150px 150px;
        grid-column-gap: 10px;
        grid-row-gap: 15px; 
        justify-content: center;
        width: 100%;
        list-style-type:none;
    }
    .btnperso{
        margin-top: 3vw;
    }
    .btn-home{
        background-image: url(../images/btn01.png);
        background-repeat: no-repeat;
        height: 150px;
        border-radius: 5px;
        margin-left: 35px;
    }

}

@media screen and (max-width: 1024px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 550px;
        grid-template-rows: 150px 150px 150px; 
        justify-content: center;
        width: 100%;
        list-style-type:none;
    }
    .btnperso{
        margin-top: -550px;
    }
    .btn-home{
        background-image: url(../images/btn01.png);
        background-repeat: no-repeat;
        height: 150px;
        border-radius: 5px;
        margin-left: -35px;
    }

}


/* responsive screen 768 width */
@media screen and (max-width: 768px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 550px;
        grid-template-rows: 150px 150px 150px; 
        justify-content: center;
        width: 100%;
        list-style-type:none;
    }
    .btnperso{
        margin-top: -590px;
    }
    .btn-home{
        background-image: url(../images/btn01.png);
        background-repeat: no-repeat;
        height: 150px;
        border-radius: 5px;
        margin-left: -35px;
    }

}

/* responsive screen 425 width */
@media screen and (min-width : 400px && max-width: 425px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 425px;
        grid-template-rows: 150px 150px 150px; 
        justify-content: center;
        width: 100%;
        list-style-type:none;
    }
    .btn-home{
        margin-top: 5px;
        background-image: url(../images/425.png);
        background-repeat: no-repeat;
        height: 150px;
        border-radius: 5px;
        margin-left: -35px;
    }
    .dropup{
        margin-left: 15px;
        padding: 5px;
    }

}

/* responsive screen 375 width */
@media screen and (max-width: 375px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 360px;
        grid-template-rows: 150px 150px 150px; 
        justify-content: center;
        width: 100%;
        list-style-type:none;
    }
    .btnperso{
        margin-top:5vh;
    }
    .btn-home{
        margin-top: 5px;
        background-image: url(../images/375.png);
        background-repeat: no-repeat;
        height: 150px;
        border-radius: 5px;
        margin-left: -35px;
    }

}

@media screen and (max-width: 369px){
    .barnav{
        display: grid !important;
        height: 80vh;
        grid-template-columns: 369px;
        grid-template-rows: 150px 150px 150px; 
        justify-content: center;
        justify-items: stretch;
        width: 100%;
        list-style-type:none;
    }
    .btnperso{
        margin-top:5vh;
    }
    .btn-home{
        border-radius: 5px;
        margin-left: 2px;
        background-image: url(../images/320.png);
    }

}

/* responsive screen 320 width */
@media screen and (max-width: 320px){
    .barnav{
        display: grid !important;
        height: 90vh;
        grid-template-columns: 320px;
        grid-template-rows: 150px 150px 150px; 
        justify-content: center;
        list-style-type:none;
    }
    .btn-home{
        margin-top: 5px;
        background-image: url(../images/320.png);
        height: 150px;
        border-radius: 5px;
        margin-left: -35px;
    }

}

